@@ -1,5 +1,11 @@
 2018-01-20  Bruno Haible  <bruno@clisp.org>
 
+	Fix crash of build-porting64-gcc-debug_gcsafety build on Linux/s390x.
+	* makemake.in: When we already have -O0 in the $XCFLAGS, don't add -O1
+	to a particular compilation command.
+
+2018-01-20  Bruno Haible  <bruno@clisp.org>
+
 	Update comments.
 	* stream.d (clear_tty_input, finish_tty_output, clear_tty_output):
 	Update comments after 2017-10-05 change.
